--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
 	<string name="app_name">Tuchong Daily</string>
 	<string name="action_settings">Settings</string>
+	<string name="share_hero">hero</string>
 
 </resources>
