--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,4 +3,5 @@
 	<string name="app_name">图虫日报</string>
 	<string name="action_settings">设置</string>
 	<string name="double_click_to_exit">双击返回退出</string>
+	<string name="action_share">分享</string>
 </resources>
