--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
 	<string name="action_settings">Settings</string>
 	<string name="share_hero">hero</string>
 	<string name="double_click_to_exit">Double click to exit</string>
+	<string name="action_share">Share</string>
 
 </resources>
