--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,4 +5,5 @@
 	<string name="double_click_to_exit">双击返回退出</string>
 	<string name="action_share">分享</string>
 	<string name="action_open_in_browser">在浏览器中打开</string>
+	<string name="share_hero">hero</string>
 </resources>
